add an env var to the deployment file
This one: SERVICE_ACCOUNT_MINIMUM_BALANCE

--- a/stack-eks/app/dev/app.daemonset.yaml
+++ b/stack-eks/app/dev/app.daemonset.yaml
@@ -54,6 +54,8 @@ spec:
               secretKeyRef:
                 name: app-env-vars
                 key: SERVICE_MNEMONIC
+          - name: SERVICE_ACCOUNT_MINIMUM_BALANCE
+            value: "200000000"
           - name: DD_ENV
             value: "development randomness-oracle-env-03-eks"
           - name: DD_VERSION
