--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - VRF_GRPC_HOST=${VRF_GRPC_HOST}
       - SENTRY_DSN=${SENTRY_DSN}
       - SERVICE_MNEMONIC=${SERVICE_MNEMONIC}
+      - SERVICE_ACCOUNT_MINIMUM_BALANCE=${SERVICE_ACCOUNT_MINIMUM_BALANCE}
       - MOST_DISTANT_ROUNDS_ALLOWED=${MOST_DISTANT_ROUNDS_ALLOWED}
       - BLOCK_INTERVAL=${BLOCK_INTERVAL}
       - MAIN_LOOP_INTERVAL=${MAIN_LOOP_INTERVAL}
