--- a/stack-eks/app/dev/app.daemonset.yaml
+++ b/stack-eks/app/dev/app.daemonset.yaml
@@ -61,7 +61,9 @@ spec:
           - name: DD_VERSION
             value: "0.0.1"
           - name: DD_AGENT_HOST
-            value: "datadog-agent.kube-system.svc"
+            valueFrom:
+              fieldRef:
+                fieldPath: status.hostIP
           - name: DD_TRACE_AGENT_PORT
             value: "8126"
           - name: DD_LOGS_INJECTION
