--- a/services/vrf/Dockerfile.dev
+++ b/services/vrf/Dockerfile.dev
@@ -1,7 +1,8 @@
-# node:16.16.0
-FROM node@sha256:8cb8d1582f235b30eea033baddde78b17143348fb392154d4c67a3c08307a8f2
+# node:16.16.0-alpine3.16
+FROM node@sha256:1c8769a8c9ed57817ef07162744a3722421333a438185c560aa42a9a1fc6ea23
 WORKDIR /usr/src/app
 COPY . /usr/src/app
+RUN apk add --no-cache python3 make g++
 RUN npm i && npm run build:proto
 
 CMD [ "npm", "run", "start:dev" ]
