add dummy transactions to pay for the opcode budget

--- a/services/app/.env.example
+++ b/services/app/.env.example
@@ -8,6 +8,7 @@ ALGOD_PORT=4001
 
 APP_CREATOR_ADDRESS=
 APP_ID=
+DUMMY_APP_ID=
 STARTING_ROUND=
 
 VRF_GRPC_HOST=dns:0.0.0.0:50051
@@ -24,3 +25,6 @@ MOST_DISTANT_ROUNDS_ALLOWED=992
 BLOCK_INTERVAL=8
 
 MAIN_LOOP_INTERVAL=1000
+
+# vrf_verify cost is 5700
+NUMBER_OF_DUMMY_TRANSACTIONS=8
