--- a/services/app/.env.test
+++ b/services/app/.env.test
@@ -20,3 +20,6 @@ SERVICE_ACCOUNT_MINIMUM_BALANCE=200000000
 MOST_DISTANT_ROUNDS_ALLOWED=992
 
 BLOCK_INTERVAL=8
+
+# vrf_verify cost is 5700
+NUMBER_OF_DUMMY_TRANSACTIONS=8
