--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ jobs:
   build-app-dev:
     docker:
       - image: cimg/node:lts
-    environment:
+        environment:
           NODE_ENV: test
     steps:
       - setup_remote_docker:
@@ -171,7 +171,7 @@ jobs:
   build-vrf-dev:
     docker:
       - image: cimg/node:lts
-    environment:
+        environment:
           NODE_ENV: test
     steps:
       - setup_remote_docker:
@@ -191,36 +191,43 @@ jobs:
       - run:
           name: build images
           command: |
-              echo "export DOCKER_PASSWORD=${DOCKER_PASSWORD}" >> ${BASH_ENV}
+            echo "export DOCKER_PASSWORD=${DOCKER_PASSWORD}" >> ${BASH_ENV}
       - run:
           name: Execute clean script
           command: cd stack-eks && ./clean-dockerhub-images.sh
 
   deploy-dev:
     docker:
-      - image: 'cimg/base:stable'
-    environment:
-      MANIFESTS_PATH: "dev"
+      - image: "cimg/base:stable"
+        environment:
+          MANIFESTS_PATH: "dev"
     steps:
       - run:
           name: Set Pipeline Env Vars
           command: |
-              echo "export AWS_ACCESS_KEY_ID=${DEV_AWS_ACCESS_KEY_ID}" >> ${BASH_ENV}
-              echo "export AWS_SECRET_ACCESS_KEY=${DEV_AWS_SECRET_ACCESS_KEY}" >> ${BASH_ENV}
-              echo "export AWS_DEFAULT_REGION=${DEV_AWS_REGION}" >> ${BASH_ENV}
-              echo "export AWS_EKS_NAME=${DEV_AWS_EKS_NAME}" >> ${BASH_ENV}
-              echo "export ALGOD_TOKEN=${DEV_ALGOD_TOKEN}" >> ${BASH_ENV}
-              echo "export SERVICE_MNEMONIC=${DEV_SERVICE_MNEMONIC}" >> ${BASH_ENV}
-              echo "export APP_AWS_SECRET_ACCESS_KEY=${DEV_APP_AWS_SECRET_ACCESS_KEY}" >> ${BASH_ENV}
-              echo "export VRF_ENCRYPTED_KEY=${DEV_VRF_ENCRYPTED_KEY}" >> ${BASH_ENV}
+            echo "export AWS_ACCESS_KEY_ID=${DEV_AWS_ACCESS_KEY_ID}" >> ${BASH_ENV}
+            echo "export AWS_SECRET_ACCESS_KEY=${DEV_AWS_SECRET_ACCESS_KEY}" >> ${BASH_ENV}
+            echo "export AWS_DEFAULT_REGION=${DEV_AWS_REGION}" >> ${BASH_ENV}
+            echo "export AWS_EKS_NAME=${DEV_AWS_EKS_NAME}" >> ${BASH_ENV}
+            echo "export ALGOD_TOKEN=${DEV_ALGOD_TOKEN}" >> ${BASH_ENV}
+            echo "export SERVICE_MNEMONIC=${DEV_SERVICE_MNEMONIC}" >> ${BASH_ENV}
+            echo "export APP_AWS_SECRET_ACCESS_KEY=${DEV_APP_AWS_SECRET_ACCESS_KEY}" >> ${BASH_ENV}
+            echo "export VRF_ENCRYPTED_KEY=${DEV_VRF_ENCRYPTED_KEY}" >> ${BASH_ENV}
       - checkout
       - deploy-kubernetes
 
 workflows:
+  version: 2
   build_test_deploy:
     jobs:
       - test-app
       - test-vrf
+      - test-build:
+          filters:
+            branches:
+              ignore: development
+          context:
+            - org-global
 
       ## Build Dev
       - build-vrf-dev:
@@ -232,7 +239,7 @@ workflows:
           requires:
             - test-app
             - test-vrf
-      
+
       - build-app-dev:
           filters:
             branches:
@@ -247,7 +254,7 @@ workflows:
       - clean-dockerhub:
           filters:
             branches:
-              only: 
+              only:
                 - development #change to dev branch
                 - staging #change to staging branch
                 - main #change to prod branch
@@ -268,4 +275,3 @@ workflows:
             - build-vrf-dev
             - build-app-dev
       ## /Deploy dev
-
