add a config file to app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,13 @@ services:
       - ALGOD_PORT=${ALGOD_PORT}
       - APP_CREATOR_ADDRESS=${APP_CREATOR_ADDRESS}
       - APP_ID=${APP_ID}
-      - STARTING_ROUND=${STARTING_ROUND}
+      - VRF_STARTING_ROUND=${VRF_STARTING_ROUND}
       - VRF_GRPC_HOST=${VRF_GRPC_HOST}
       - SENTRY_DSN=${SENTRY_DSN}
       - SERVICE_MNEMONIC=${SERVICE_MNEMONIC}
       - SERVICE_ACCOUNT_MINIMUM_BALANCE=${SERVICE_ACCOUNT_MINIMUM_BALANCE}
       - MOST_DISTANT_ROUNDS_ALLOWED=${MOST_DISTANT_ROUNDS_ALLOWED}
-      - BLOCK_INTERVAL=${BLOCK_INTERVAL}
+      - VRF_ROUND_MULTIPLE=${VRF_ROUND_MULTIPLE}
       - MAIN_LOOP_INTERVAL=${MAIN_LOOP_INTERVAL}
 
   vrf:
