--- a/services/app/.env.example
+++ b/services/app/.env.example
@@ -9,7 +9,7 @@ ALGOD_PORT=4001
 APP_CREATOR_ADDRESS=
 APP_ID=
 DUMMY_APP_ID=
-STARTING_ROUND=
+VRF_STARTING_ROUND=
 
 VRF_GRPC_HOST=dns:0.0.0.0:50051
 
@@ -20,9 +20,9 @@ SERVICE_MNEMONIC=
 SERVICE_ACCOUNT_MINIMUM_BALANCE=200000000
 
 # 1000 -8
-MOST_DISTANT_ROUNDS_ALLOWED=984
+MOST_DISTANT_ROUNDS_ALLOWED=992
 
-BLOCK_INTERVAL=8
+VRF_ROUND_MULTIPLE=8
 
 MAIN_LOOP_INTERVAL=1000
 
