--- a/services/app/.env.test
+++ b/services/app/.env.test
@@ -6,7 +6,7 @@ ALGOD_SERVER=http://127.0.0.1
 ALGOD_PORT=4001
 
 APP_ID=
-STARTING_ROUND=5000
+VRF_STARTING_ROUND=5000
 
 VRF_GRPC_HOST=dns:0.0.0.0:50051
 
@@ -17,9 +17,9 @@ SERVICE_MNEMONIC=
 SERVICE_ACCOUNT_MINIMUM_BALANCE=200000000
 
 # 1000 -8
-MOST_DISTANT_ROUNDS_ALLOWED=984
+MOST_DISTANT_ROUNDS_ALLOWED=992
 
-BLOCK_INTERVAL=8
+VRF_ROUND_MULTIPLE=8
 
 # vrf_verify cost is 5700
 NUMBER_OF_DUMMY_TRANSACTIONS=8
