--- a/stack-eks/app/dev/app.daemonset.yaml
+++ b/stack-eks/app/dev/app.daemonset.yaml
@@ -47,7 +47,7 @@ spec:
             value: "1143833343"
           - name: NUMBER_OF_DUMMY_TRANSACTIONS
             value: "8"
-          - name: STARTING_ROUND
+          - name: VRF_STARTING_ROUND
             value: "19955232"
           - name: VRF_GRPC_HOST
             value: "dns:vrf.app.svc:50051"
@@ -74,7 +74,7 @@ spec:
             value: "true"
           - name: MOST_DISTANT_ROUNDS_ALLOWED
             value: "984"
-          - name: BLOCK_INTERVAL
+          - name: VRF_ROUND_MULTIPLE
             value: "8"
           - name: MAIN_LOOP_INTERVAL
             value: "500"
