fix app Dockerfile

--- a/services/app/Dockerfile
+++ b/services/app/Dockerfile
@@ -6,7 +6,8 @@ RUN npm install && npm run build:proto && npm run build
 
 # node:16.16.0-alpine3.16
 FROM node@sha256:d39ab4712a8395d0b399dea44d9cb8b34ac942411b6a380449ebdb9d321136a3 as prod
-RUN apk add dumb-init
+RUN apk add --no-cache dumb-init=1.2.5-r1
+RUN rm -rf /var/cache/apk/*
 ENV NODE_ENV production
 WORKDIR /usr/src/app
 COPY --chown=node:node ./package*.json /usr/src/app/
