feat: add algorand fallback servers
servers can be set as a comma-separated list as env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       - SERVICE=${SERVICE}
       - NODE_ENV=${NODE_ENV}
       - LOG_LEVEL=${LOG_LEVEL}
-      - ALGOD_TOKEN=${ALGOD_TOKEN}
-      - ALGOD_SERVER=${ALGOD_SERVER}
-      - ALGOD_PORT=${ALGOD_PORT}
+      - ALGOD_TOKENS=${ALGOD_TOKENS}
+      - ALGOD_SERVERS=${ALGOD_SERVERS}
+      - ALGOD_PORTS=${ALGOD_PORTS}
       - APP_CREATOR_ADDRESS=${APP_CREATOR_ADDRESS}
       - APP_ID=${APP_ID}
       - VRF_STARTING_ROUND=${VRF_STARTING_ROUND}
