Improve prod deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -459,4 +459,5 @@ workflows:
             - org-global
           requires:
             - approve-deploy-prod
+            - deploy-prod-a
       # /Deploy prod
