Improve log data on submit value

--- a/services/app/.env.test
+++ b/services/app/.env.test
@@ -18,5 +18,7 @@ MOST_DISTANT_ROUNDS_ALLOWED=992
 
 VRF_ROUND_MULTIPLE=8
 
+SUBMITTED_AFTER_THRESHOLD=3
+
 # vrf_verify cost is 5700
 NUMBER_OF_DUMMY_TRANSACTIONS=8
