--- a/services/app/.env.example
+++ b/services/app/.env.example
@@ -25,5 +25,7 @@ VRF_ROUND_MULTIPLE=8
 
 MAIN_LOOP_INTERVAL=1000
 
+SUBMITTED_AFTER_THRESHOLD=3
+
 # vrf_verify cost is 5700
 NUMBER_OF_DUMMY_TRANSACTIONS=8
