add SUBMITTED_AFTER_THRESHOLD env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - MOST_DISTANT_ROUNDS_ALLOWED=${MOST_DISTANT_ROUNDS_ALLOWED}
       - VRF_ROUND_MULTIPLE=${VRF_ROUND_MULTIPLE}
       - MAIN_LOOP_INTERVAL=${MAIN_LOOP_INTERVAL}
+      - SUBMITTED_AFTER_THRESHOLD=${SUBMITTED_AFTER_THRESHOLD}
 
   vrf:
     hostname: algorand-randomness-beacon-vrf
