--- a/stack-eks/app/prod-b/app.daemonset.yaml
+++ b/stack-eks/app/prod-b/app.daemonset.yaml
@@ -78,6 +78,8 @@ spec:
             value: "8"
           - name: MAIN_LOOP_INTERVAL
             value: "3000"
+          - name: SUBMITTED_AFTER_THRESHOLD
+            value: "3"
           resources:
             requests:
               cpu: 200m
