--- a/stack-eks/vrf/prod-a/vrf.daemonset.yaml
+++ b/stack-eks/vrf/prod-a/vrf.daemonset.yaml
@@ -33,14 +33,14 @@ spec:
           - name: AWS_REGION
             value: "eu-west-1"
           - name: AWS_ACCESS_KEY_ID
-            value: "AKIAVQ5QOOOM7F2MUCA2"
+            value: "AKIAUCFCNNDPZIQCZ776"
           - name: AWS_SECRET_ACCESS_KEY
             valueFrom:
               secretKeyRef:
                 name: app-env-vars
                 key: AWS_SECRET_ACCESS_KEY
           - name: AWS_KMS_KEY_ID
-            value: "mrk-16204a3cd38f4c1c8c0a523b9ba10bf2"
+            value: "mrk-b052d34bfc334732978512e73acb9f41"
           - name: VRF_ENCRYPTED_KEY
             valueFrom:
               secretKeyRef:
