--- a/stack-eks/vrf/prod-a/vrf.daemonset.yaml
+++ b/stack-eks/vrf/prod-a/vrf.daemonset.yaml
@@ -31,7 +31,7 @@ spec:
           - name: LOG_LEVEL
             value: "debug"
           - name: AWS_REGION
-            value: "eu-west-1"
+            value: "us-east-2"
           - name: AWS_ACCESS_KEY_ID
             value: "AKIAUCFCNNDPZIQCZ776"
           - name: AWS_SECRET_ACCESS_KEY
