--- a/stack-eks/vrf/prod-b/vrf.daemonset.yaml
+++ b/stack-eks/vrf/prod-b/vrf.daemonset.yaml
@@ -31,9 +31,9 @@ spec:
           - name: LOG_LEVEL
             value: "debug"
           - name: AWS_REGION
-            value: "us-east-2"
+            value: "eu-west-1"
           - name: AWS_ACCESS_KEY_ID
-            value: "AKIAUCFCNNDPZIQCZ776"
+            value: "AKIAUCFCNNDP66CIXIV2"
           - name: AWS_SECRET_ACCESS_KEY
             valueFrom:
               secretKeyRef:
