--- a/stack-eks/vrf/prod-b/vrf.daemonset.yaml
+++ b/stack-eks/vrf/prod-b/vrf.daemonset.yaml
@@ -33,7 +33,7 @@ spec:
           - name: AWS_REGION
             value: "eu-west-1"
           - name: AWS_ACCESS_KEY_ID
-            value: "AKIAUCFCNNDP3KTGUU2C"
+            value: "AKIAUCFCNNDP43FOEMXL"
           - name: AWS_SECRET_ACCESS_KEY
             valueFrom:
               secretKeyRef:
