--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,6 +225,8 @@ jobs:
             echo "export AWS_DEFAULT_REGION=${DEV_AWS_REGION}" >> ${BASH_ENV}
             echo "export AWS_EKS_NAME=${DEV_AWS_EKS_NAME}" >> ${BASH_ENV}
             echo "export ALGOD_TOKENS=${DEV_ALGOD_TOKENS}" >> ${BASH_ENV}
+            echo "export ALGOD_SERVERS=${DEV_ALGOD_SERVERS}" >> ${BASH_ENV}
+            echo "export ALGOD_PORTS=${DEV_ALGOD_PORTS}" >> ${BASH_ENV}
             echo "export SERVICE_MNEMONIC=${DEV_SERVICE_MNEMONIC}" >> ${BASH_ENV}
             echo "export APP_AWS_SECRET_ACCESS_KEY=${DEV_APP_AWS_SECRET_ACCESS_KEY2}" >> ${BASH_ENV}
             echo "export VRF_ENCRYPTED_KEY=${DEV_VRF_ENCRYPTED_KEY}" >> ${BASH_ENV}
@@ -245,6 +247,8 @@ jobs:
             echo "export AWS_DEFAULT_REGION=${STAGING_AWS_REGION}" >> ${BASH_ENV}
             echo "export AWS_EKS_NAME=${STAGING_AWS_EKS_NAME}" >> ${BASH_ENV}
             echo "export ALGOD_TOKENS=${STAGING_ALGOD_TOKENS}" >> ${BASH_ENV}
+            echo "export ALGOD_SERVERS=${STAGING_ALGOD_SERVERS}" >> ${BASH_ENV}
+            echo "export ALGOD_PORTS=${STAGING_ALGOD_PORTS}" >> ${BASH_ENV}
             echo "export SERVICE_MNEMONIC=${STAGING_SERVICE_MNEMONIC}" >> ${BASH_ENV}
             echo "export APP_AWS_SECRET_ACCESS_KEY=${STAGING_APP_AWS_SECRET_ACCESS_KEY2}" >> ${BASH_ENV}
             echo "export VRF_ENCRYPTED_KEY=${STAGING_VRF_ENCRYPTED_KEY}" >> ${BASH_ENV}
@@ -265,6 +269,8 @@ jobs:
             echo "export AWS_DEFAULT_REGION=${PROD_A_AWS_REGION}" >> ${BASH_ENV}
             echo "export AWS_EKS_NAME=${PROD_A_AWS_EKS_NAME}" >> ${BASH_ENV}
             echo "export ALGOD_TOKENS=${PROD_A_ALGOD_TOKENS}" >> ${BASH_ENV}
+            echo "export ALGOD_SERVERS=${PROD_A_ALGOD_SERVERS}" >> ${BASH_ENV}
+            echo "export ALGOD_PORTS=${PROD_A_ALGOD_PORTS}" >> ${BASH_ENV}
             echo "export SERVICE_MNEMONIC=${PROD_A_SERVICE_MNEMONIC}" >> ${BASH_ENV}
             echo "export APP_AWS_SECRET_ACCESS_KEY=${PROD_A_APP_AWS_SECRET_ACCESS_KEY2}" >> ${BASH_ENV}
             echo "export VRF_ENCRYPTED_KEY=${PROD_A_VRF_ENCRYPTED_KEY}" >> ${BASH_ENV}
@@ -285,6 +291,8 @@ jobs:
             echo "export AWS_DEFAULT_REGION=${PROD_B_AWS_REGION}" >> ${BASH_ENV}
             echo "export AWS_EKS_NAME=${PROD_B_AWS_EKS_NAME}" >> ${BASH_ENV}
             echo "export ALGOD_TOKENS=${PROD_B_ALGOD_TOKENS}" >> ${BASH_ENV}
+            echo "export ALGOD_SERVERS=${PROD_B_ALGOD_SERVERS}" >> ${BASH_ENV}
+            echo "export ALGOD_PORTS=${PROD_B_ALGOD_PORTS}" >> ${BASH_ENV}
             echo "export SERVICE_MNEMONIC=${PROD_B_SERVICE_MNEMONIC}" >> ${BASH_ENV}
             echo "export APP_AWS_SECRET_ACCESS_KEY=${PROD_B_APP_AWS_SECRET_ACCESS_KEY2}" >> ${BASH_ENV}
             echo "export VRF_ENCRYPTED_KEY=${PROD_B_VRF_ENCRYPTED_KEY}" >> ${BASH_ENV}
