--- a/stack-eks/app/staging/app.daemonset.yaml
+++ b/stack-eks/app/staging/app.daemonset.yaml
@@ -36,9 +36,15 @@ spec:
                 name: app-env-vars
                 key: ALGOD_TOKENS
           - name: ALGOD_SERVERS
-            value: https://testnet-algod.appliedblockchain.com,https://node.testnet.algoexplorerapi.io
+            valueFrom:
+              secretKeyRef:
+                name: app-env-vars
+                key: ALGOD_SERVERS
           - name: ALGOD_PORTS
-            value: ","
+            valueFrom:
+              secretKeyRef:
+                name: app-env-vars
+                key: ALGOD_PORTS
           - name: APP_CREATOR_ADDRESS
             value: "LWOXAHEF32ISGGQSQTOFFTVSVUGJIRRFSIJYRFVL4PK4KS7MNG4SBWKYK4"
           - name: APP_ID
@@ -51,8 +57,11 @@ spec:
             value: "19955232"
           - name: VRF_GRPC_HOST
             value: "dns:vrf.app.svc:50051"
-          - name: "SENTRY_DSN"
-            value: "https://0cdc8ad8aea54dbbbad3dd3b7bec531f@o1305787.ingest.sentry.io/6622570"
+          - name: SENTRY_DSN
+            valueFrom:
+              secretKeyRef:
+                name: app-env-vars
+                key: SENTRY_DSN
           - name: SERVICE_MNEMONIC
             valueFrom:
               secretKeyRef:
